<resources>
    <string name="app_name">DrugTrackerApp</string>
    <string name="catalog">Catalog</string>
    <string name="create_new_account">Create New Account</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="name">Name</string>
    <string name="label">Label</string>
    <string name="hint">Hint</string>
    <string name="name_label">Name</string>
    <string name="email_label">Email</string>
    <string name="create_password_label">Create a password</string>
    <string name="name_hint">Enter your name</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="error">Error</string>
    <string name="my_medications">My Medications</string>
    <string name="delete">Delete</string>
    <string name="medication_name">Medication Name</string>
    <string name="search_medications">Search Medications</string>
    <string name="ic_search_medications">ic_search_medications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ic_clear_text">ic_clear_text</string>
    <string name="ic_search">ic_search</string>
    <string name="back">Back</string>
    <string name="ic_back">ic_back</string>
    <string name="search">Search</string>
    <string name="search_results">Search Results</string>
    <string name="details">Details</string>
    <string name="add_medication_to_list">Add Medication to List</string>
    <string name="search_medication">Search Medication</string>
    <string name="medicine_added_successfully">Medicine added successfully</string>
    <string name="you_can_only_add_up_to_7_medicines">You can only add up to 7 medicines</string>
    <string name="generic_name">Generic Name</string>
    <string name="drug_already_added">Drug already added</string>
    <string name="account_created_successfully">Account created successfully</string>
    <string name="login_successfully">Login Successfully</string>
</resources>