<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="-5dp"
            android:contentDescription="@string/ic_back"
            android:src="@drawable/ic_back"
            app:tint="@color/blue_color" />

        <com.example.drugtrackerapp.utils.CustomTextViewSfRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/ic_back"
            android:text="@string/back"
            android:textColor="@color/blue_color"
            android:textSize="@dimen/_14ssp" />

        <com.example.drugtrackerapp.utils.CustomTextViewSfRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/details"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />


    </RelativeLayout>
</layout>