<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/very_light_periwinkle"
        tools:context=".auth.view.WelcomeActivity">


        <ImageView
            android:id="@+id/iv_catalog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_100sdp"
            android:contentDescription="@string/catalog"
            android:src="@drawable/ic_catalog"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/btn_create_account"
                style="@style/AppButtonStyle"
                android:text="@string/create_new_account" />


            <com.example.drugtrackerapp.utils.CustomTextViewSfRegular
                android:id="@+id/tv_already_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/i_already_have_an_account"
                android:textColor="@color/button_primary_blue"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>