<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.drugtrackerapp.ui.medications.viewModel.DrugDetailsBottomSheetViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        tools:context=".ui.medications.view.SearchMedicationBottomSheetFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/shape_bottom_sheet_fragment_top"
            tools:context=".ui.medications.view.SearchMedicationBottomSheetFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btn_add_medicine"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <include
                    android:id="@+id/includeBottomSheetHeader"
                    layout="@layout/bottom_sheet_header" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivMedication"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:src="@drawable/ic_catalog" />

                <com.example.drugtrackerapp.utils.CustomTextViewSfBold
                    android:id="@+id/tvMedicationName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <com.example.drugtrackerapp.utils.CustomTextViewSfRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/generic_name"
                    android:textColor="@color/gen_color"
                    android:textSize="@dimen/_10ssp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/rounded_white_bg"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp">

                    <com.example.drugtrackerapp.utils.CustomTextViewSfRegular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/details"
                        android:textColor="@color/gen_color"
                        android:textSize="@dimen/_12ssp" />

                    <androidx.core.widget.NestedScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fillViewport="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">


                            <com.example.drugtrackerapp.utils.CustomTextViewSfRegular
                                android:id="@+id/tv_details"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/details"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_12ssp" />
                        </LinearLayout>
                    </androidx.core.widget.NestedScrollView>
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_add_medicine"
                style="@style/AppButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/_25sdp"
                android:text="@string/add_medication_to_list" />
        </RelativeLayout>
    </RelativeLayout>
</layout>